@@ -4,6 +4,7 @@
 
 === 1.0.21 ===
 * Added empty text property for edit.
+* Added text size estimation feature to the tk::Label widget.
 * Fixed illegal memory access when destroying Box, Grid and Menu widgets.
 * Added tab.pointer property to the tk::TabControl.
 * Updated build scripts.
